# nightseek

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  REFACTORING_NOTES.md  analyzer.py  cache_manager.py  catalog.py  config.py  enums.py  events.py  formatter.py  logging_config.py  main.py  opengc_loader.py  precommit.sh  profile_perf.py  pyproject.toml  scoring.py  search.py  sky_calculator.py  snapshot-tabs.md  star_catalog.py  test_nightseek.py  timezone_utils.py  update_checker.py  weather.py
.github/workflows/: ci.yml  deploy.yml  update-astro-data.yml
.husky/: pre-commit
.kiro/settings/: lsp.json
cli/: analyzer.py  cache_manager.py  catalog.py  config.py  event_detection.py  events.py  formatter.py  main.py  models.py  opengc_loader.py  pyproject.toml  scoring.py  search.py  sky_calculator.py  test_nightseek.py  update_checker.py  weather.py
mobile/: capacitor.config.json  capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
mobile/ios/App/: Podfile
mobile/scripts/: sync-deps.sh
mobile/src/: main.tsx
mobile/src/hooks/: useInstallPrompt.ts
mobile/src/stores/: AppContext.tsx
scripts/: fetch-astro-data.mjs  generate-light-pollution-grid.mjs  invalidate-cdn.sh  validate.sh
web/: .gitignore  IMPLEMENTATION_PLAN.md  biome.json  index.html  knip.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  vitest.config.ts
web/.husky/: pre-commit
web/coverage/: coverage-final.json  index.html  lcov.info
web/coverage/lcov-report/: index.html
web/coverage/src/: App.tsx.html  index.html
web/e2e/: app.spec.ts  forecast.spec.ts
web/playwright-report/: index.html
web/public/data/: asteroids.json  comets.json  donki.json  meta.json  neo.json
web/src/: App.test.tsx  App.tsx  index.css  main.tsx
web/src/data/: asteroids.json  comets.json  donki.json  ephemeris.json  light-pollution.json  meta.json  neo.json
web/src/hooks/: useBodyScrollLock.ts  useCurrentTime.ts  useDeviceCompass.ts  useFocusTrap.ts  useInstallPrompt.ts  useUIState.ts
web/src/lib/: analyzer.ts
web/src/stores/: AppContext.test.tsx  AppContext.tsx
web/src/test/: factories.ts  setup.ts
(+353 files in other folders)
