[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nightseek"
version = "0.1.0"
description = "Astronomy observation planning tool - find the best nights and times for astrophotography"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "skyfield>=1.48",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "requests>=2.31.0",
    "timezonefinder>=6.5.0",
    "pandas>=2.0.0",  # Required for comet orbital elements
    "platformdirs>=4.0.0",  # Cross-platform config/cache directories
]

[project.scripts]
nightseek = "main:app"

[tool.setuptools]
py-modules = ["main", "analyzer", "catalog", "cache_manager", "config", "formatter", "sky_calculator", "timezone_utils", "weather", "opengc_loader", "scoring", "update_checker"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "ty>=0.0.11",
    "vulture>=2.13",
]
